# myvenv

./: LICENSE  README.md  pyproject.toml  setup.py  test_cli.py
myvenv/: __init__.py  cli.py
tests/: test_cli.py
